# .zsh-conf

./: .gitignore  README.md  alias.zsh  aws.sh  bazel.sh  functions.sh  genome-dk.sh  init.sh  init.zsh
functions/: alias.zsh  aws.zsh  bazel.zsh  bazel_deps  bdep  fixit  init.zsh  maws  moddot  termplot  venv
functions/aws/: aws_cmds.py  instance_dicts.py  maws.py  typedefs.py
init/: update_plugins.zsh  update_python_venv.zsh  update_zsh_conf.zsh
plugins/: init.zsh
python/butils/: pyproject.toml
python/butils/butils/scripts/: bdep.py
python/maws/: .gitignore  pyproject.toml
python/maws/maws/: aws_cmds.py  cli.py  instance_dicts.py
python/moddot/: __init__.py  pyproject.toml
python/moddot/moddot/: __init__.py  cli.py  dot.py
python/termplot/: pyproject.toml
python/termplot/termplot/: cli.py
