[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "butils"
version = "0.1.0"
description = "Modifying dot files"
dependencies = [] #  [ "moddot" ]

[tool.setuptools]
packages = ["butils"]

[project.scripts]
butils_bdep = "butils.scripts.bdep:main"